added pgvector support, support for predicate query, order by query, distance queries